# HRUT

./: README.md
.moon/: toolchain.yml  workspace.yml
.moon/hooks/: pre-commit.sh
apps/frontend/: moon.yml  package.json  pnpm-lock.yaml
apps/frontend/src/: main.tsx
apps/server/: Cargo.toml  build.rs  moon.yml
apps/server/proto/greet/v1/: greet.proto
apps/server/src/: main.rs
