[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = {version = "0.12.3", features = ["gzip"]}
tokio = { version = "1.36.0", features = ["full"]}
prost = "0.12.3"
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["tracing-log", "fmt"]}
tonic-reflection = "0.11.0"
tonic-web= "0.11.0"
tower-http = { version = "0.4", features = ["cors"]}
tonic-health = "0.11.0"



[build-dependencies]
tonic-build = "0.11.0"
